--- a/DECAMAIN.html
+++ b/DECAMAIN.html
@@ -8,7 +8,7 @@
       <a href="pictures.html">What is DECA</a>
       <a href="#about">Events</a>
       <a href="contactpg.html">Competition</a>
-      <a href="surveypg.html">Survey</a>
+      <a href="loginpg.html">Login</a>
   	<div class="logo">
   		<img src="LT.png" style="width:6%; margin:10px" align="right">
 	</div>
@@ -22,7 +22,8 @@
 </TR>
 <TR>
 <TD><img src="pic5.jpg"></TD>
-<TD><h1>hi </h1></TD>
+<TD><p align="center">DECA</p>
+  <p align="center" >@ LAKE TRAVIS HIGH SCHOOL</p></TD>
 <TD><img src="pic7.png" ></TD>
 </table>
 </body>
