--- a/DECAMAIN.html
+++ b/DECAMAIN.html
@@ -10,22 +10,40 @@
       <a href="contactpg.html">Competition</a>
       <a href="loginpg.html">Login</a>
   	<div class="logo">
-  		<img src="LT.png" style="width:6%; margin:10px" align="right">
+  		<img src="pics/LT.png" style="width:6%; margin:10px" align="right">
 	</div>
 	</div>
     <br>
 <table width= "10">
 <TR>
-<TD><img src="pic3.jpg"></TD>
-<TD><img src="pic2.jpg" ></TD>
-<TD><img src="pics4.jpg" ></TD>
+<TD><img src="pics/pic3.jpg"></TD>
+<TD><img src="pics/pic2.jpg" ></TD>
+<TD><img src="pics/pics4.jpg" ></TD>
 </TR>
 <TR>
-<TD><img src="pic5.jpg"></TD>
+<TD><img src="pics/pic5.jpg"></TD>
 <TD><p align="center">DECA</p>
   <p align="center" >@ LAKE TRAVIS HIGH SCHOOL</p></TD>
-<TD><img src="pic7.png" ></TD>
+<TD><img src="pics/pic7.png" ></TD>
 </table>
 </body>
+<script>
+var firebaseConfig = {
+    apiKey: "AIzaSyBG34CtLr0hHjpGTNFaTb31aGEN-_uffQo",
+    authDomain: "lolz-37fe4.firebaseapp.com",
+    databaseURL: "https://lolz-37fe4.firebaseio.com",
+    projectId: "lolz-37fe4",
+    storageBucket: "lolz-37fe4.appspot.com",
+    messagingSenderId: "507327708227",
+    appId: "1:507327708227:web:b044a44923cc65032628f6"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
+<script src="index.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-firestore.js"></script>
+
 
 </html>
