--- a/loginpg.html
+++ b/loginpg.html
@@ -2,23 +2,51 @@
 <head>
 <link href="login.css" rel="stylesheet" type="text/css">
 <title> Login page  </title>
+</head>
+
 <body>
 <div class="topnav">
-      <a class="active" href="index.html">Home</a>
+      <a class="active" href="DECAMAIN.html">Home</a>
       <a href="pictures.html">What is DECA</a>
       <a href="#about">Events</a>
       <a href="contactpg.html">Competition</a>
       <a href="loginpg.html">Login</a>
   	<div class="logo">
-  		<img src="LT.png" style="width:6%; margin:10px" align="right">
+  		<img src="pics/LT.png" style="width:6%; margin:10px" align="right">
 	</div>
 	</div>
-    <div class= "loginbox">
-    <img src="iconlgn.png" class="icon">
-    
-    </div>
+<div class="123">
+    <img src="pics/reallogo.png" class="icon">
+<form id="log_in">
+							<label>Email address</label>
+					    	<input type="email" id="logemail_inp" required>
+<br>
+							<label>Password*</label>
+							 <input type="password" id="logpassword_inp" required>
+					  	<button type="submit" class="submit-button">Sign In</button>
+					</form></div>
   
 </body>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-firestore.js"></script>
 
-</head>
+<script>
+  var firebaseConfig = {
+    apiKey: "AIzaSyBG34CtLr0hHjpGTNFaTb31aGEN-_uffQo",
+    authDomain: "lolz-37fe4.firebaseapp.com",
+    databaseURL: "https://lolz-37fe4.firebaseio.com",
+    projectId: "lolz-37fe4",
+    storageBucket: "lolz-37fe4.appspot.com",
+    messagingSenderId: "507327708227",
+    appId: "1:507327708227:web:b044a44923cc65032628f6"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+<script src="index.js"></script>
+
+
+
 </html>
