--- a/loginpg.html
+++ b/loginpg.html
@@ -9,21 +9,31 @@
           <a href="pictures.html">What is DECA</a>
           <a href="#about">Events</a>
           <a href="contactpg.html">Competition</a>
-          <a href="#" onclick="signOut()">Log Out</a>
+          <a href="#" onClick="signOut()">Log Out</a>
         <div class="logo">
             <img src="pics/LT.png" style="width:6%; margin:10px" align="right">
         </div>
         </div>
+        <div class="loginbox">
         <div class="123">
             <img src="pics/reallogo.png" class="icon">
-            <form id="log_in">
+            <br>
+            <br>
+            <br>
+            <form id="log">
                 <label>Email address</label>
                 <input type="email" id="logemail_inp" required>
                 <br>
+                <br>
+                <br>
                 <label>Password</label>
                 <input type="password" id="logpassword_inp" required>
+                <br>
+                <br>
+                <br>
                 <button type="submit">Sign In</button>
             </form>
+        </div>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
