--- a/signUppg.html
+++ b/signUppg.html
@@ -17,21 +17,24 @@
         <div class="loginbox">
         <div class="123">
             <img src="pics/reallogo.png" class="icon">
+            <H2>Sign up</H2>
             <br>
             <br>
             <br>
-            <form id="log">
-                <input type="email" id="logemail_inp" required placeholder="email">
+            <form id="signup">
+                <label>Email address</label>
+                <input type="email" id="signup_email" required>
                 <br>
                 <br>
                 <br>
-                <input type="password" id="logpassword_inp" required  placeholder="Password">
+                <label>Password</label>
+                <input type="password" id="signup_pass" required>
                 <br>
                 <br>
                 <br>
-                <button type="submit">Sign In</button>
+                <button type="submit">Sign Up</button>
             </form>
-            <a href = "signUppg.html"> Sign Up</a>
+              <a href="loginpg.html">Login</a>
         </div>
         </div>
     </body>
