--- a/loginpg.html
+++ b/loginpg.html
@@ -17,11 +17,12 @@
         <div class="loginbox">
         <div class="123">
             <img src="pics/reallogo.png" class="icon">
+            <img src="pics/LT.png" class="logo">
             <br>
             <br>
             <br>
             <form id="log">
-                <input type="email" id="logemail_inp" required placeholder="email">
+                <input type="email" id="logemail_inp" required placeholder="Email">
                 <br>
                 <br>
                 <br>
@@ -31,7 +32,8 @@
                 <br>
                 <button type="submit">Sign In</button>
             </form>
-            <a href = "signUppg.html"> Sign Up</a>
+            <br>
+            <a class="sign" href = "signUppg.html"> Don't have an account? Sign Up HERE! </a>
         </div>
         </div>
     </body>
