--- a/signUppg.html
+++ b/signUppg.html
@@ -17,24 +17,23 @@
         <div class="loginbox">
         <div class="123">
             <img src="pics/reallogo.png" class="icon">
-            <H2>Sign up</H2>
+            <img src="pics/LT.png" class="logo">
             <br>
             <br>
             <br>
             <form id="signup">
-                <label>Email address</label>
-                <input type="email" id="signup_email" required>
+                <input type="email" id="signup_email" required placeholder="Enter Email Here">
                 <br>
                 <br>
                 <br>
-                <label>Password</label>
-                <input type="password" id="signup_pass" required>
+                <input type="password" id="signup_pass" required placeholder="Enter Password Here">
                 <br>
                 <br>
                 <br>
                 <button type="submit">Sign Up</button>
             </form>
-              <a href="loginpg.html">Login</a>
+            <br>
+              <a class="sign" href="loginpg.html">Already have an account? Login HERE!</a>
         </div>
         </div>
     </body>
