--- a/DECAMAIN.html
+++ b/DECAMAIN.html
@@ -4,23 +4,23 @@
 
 <body>
 	<div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="pictures.html">What is DECA</a>
-      <a href="#about">Events</a>
-      <a href="contactpg.html">Competition</a>
-      <a href="#" onclick="signOut()">Logout</a>
+      <a class="active" href="DECAMAIN.html">Home</a>
+      <a href="events.html">Events:</a>
+      <a href="#about">Role-play</a>
+      <a href="contactpg.html">Written</a>
+      <a href="contactpg.html">VBC</a>
+      <a href="#" onClick="signOut()">Logout</a>
   	<div class="logo">
   		<img src="pics/LT.png" style="width:6%; margin:10px" align="right">
 	</div>
 	</div>
     <br>
-<table width= "10">
-<TD><img src="pics/pic3.jpg"></TD>
-<TD><img src="pics/pic2.jpg" ></TD>
-<TD><img src="pics/pics4.jpg" ></TD>
-<TD><img src="pics/pic5.jpg"></TD>
-<TD><img src="pics/pic7.png" ></TD>
-</table>
+    <div id="hero">
+<video playsinline autoplay muted loop poster="placeholder.jpg" id="bgvideo" width="x" height="y">
+<source src="vidd.mp4" type="video/mp4">
+</video>
+</div>
+
 </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
